--- a/Stage_3_and_4/Backend/site1/Dockerfile
+++ b/Stage_3_and_4/Backend/site1/Dockerfile
@@ -1,17 +1,28 @@
+
 FROM python:3.10-slim
+
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
-# Install system dependencies for mysqlclient
 RUN apt-get update && apt-get install -y \
     default-libmysqlclient-dev \
     build-essential \
     pkg-config \
+    python3-dev \
+    netcat-openbsd \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+
+RUN pip install --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
 
 COPY . .
+
+
+EXPOSE 8000
+
 
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
