--- a/Stage_3_and_4/docker-compose.yml
+++ b/Stage_3_and_4/docker-compose.yml
@@ -10,19 +10,22 @@ services:
     volumes:
       - db-data:/var/lib/mysql
     ports:
-      - "3307:3306" # Localhost port 3307 -> Container port 3306
+      - "3307:3306" 
 
   backend:
     build: ./Backend/site1
+    restart: on-failure 
     command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - ./Backend/site1:/app
+    ports:
+      - "8000:8000" 
     environment:
       - DB_HOST=db
       - DB_NAME=emenu
       - DB_USER=root
       - DB_PASSWORD=rootpassword
-      - DB_PORT=3306
+      - DB_PORT=3306 
     depends_on:
       - db
 
@@ -32,6 +35,15 @@ services:
       - "80:80"
     depends_on:
       - backend
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    restart: always
+    ports:
+      - "8080:80"
+    environment:
+      - PMA_HOST=db
+      - PMA_PORT=3306
 
 volumes:
   db-data:
