--- a/Stage_3_and_4/docker-compose.yml
+++ b/Stage_3_and_4/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: mysql:8.0
@@ -10,22 +8,22 @@ services:
     volumes:
       - db-data:/var/lib/mysql
     ports:
-      - "3307:3306" 
+      - "3307:3306"
 
   backend:
     build: ./Backend/site1
-    restart: on-failure 
+    restart: on-failure
     command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - ./Backend/site1:/app
     ports:
-      - "8000:8000" 
+      - "8000:8000"
     environment:
       - DB_HOST=db
       - DB_NAME=emenu
       - DB_USER=root
       - DB_PASSWORD=rootpassword
-      - DB_PORT=3306 
+      - DB_PORT=3306
     depends_on:
       - db
 
@@ -37,13 +35,15 @@ services:
       - backend
 
   phpmyadmin:
-    image: phpmyadmin/phpmyadmin
+    image: phpmyadmin:5.2.1
     restart: always
     ports:
       - "8080:80"
     environment:
       - PMA_HOST=db
       - PMA_PORT=3306
+    depends_on:
+      - db
 
 volumes:
   db-data:
